--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,29 @@
+/*******************************
+*
+* Author: Alex
+* Date: 3/11/2020
+*
+*******************************/
+
+
+
+/* Style all P tags */
+
 p{
     font-size: 18px;
     color: blue;
+}
+
+/*
+
+#header p{
+    font-size: 24px;
+}
+
+*/
+
+/* Style all H1 tags */
+
+h1{
+    font-size: 44px;
 }
