--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,29 +1,26 @@
-/*******************************
-*
-* Author: Alex
-* Date: 3/11/2020
-*
-*******************************/
+/* TARGETING ELEMENTS / TAGS */
 
 
-
-/* Style all P tags */
 
 p{
-    font-size: 18px;
+    font-size: 12px;
+    color: red;
+}
+
+a{
+    text-decoration: underline;
     color: blue;
 }
 
-/*
-
-#header p{
-    font-size: 24px;
+span{
+    text-transform: uppercase;
 }
 
-*/
-
-/* Style all H1 tags */
-
 h1{
-    font-size: 44px;
+    font-size: 32px;
+}
+
+div{
+    width: 100%;
+    background-color: grey;
 }
