--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,11 +1,6 @@
-a{
-    color: crimson;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover{
-    color: darkmagenta;
-    text-decoration: underline;
-    background-color: aquamarine;
+p{
+    font-size: 12px;
+    letter-spacing: 0.2em;
+    word-spacing: 0.3em;
+    line-height: 1.5em;
 }
