--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,7 @@
-p{
-    font-size: 14px;
-    line-height: 2em;
-    margin-bottom: 32px;
+.box{
+    margin: 30px;
+    padding: 20px;
+    border: 1px solid #000;
+    width: 100%;
+    height: 200px;
 }
