--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,6 @@
 .box{
-    margin: 30px;
+    margin: 30px 20px 15px 5px;
     padding: 20px;
     border: 1px solid #000;
-    width: 100%;
-    height: 200px;
+    
 }
