--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,6 @@
 .box{
-    margin: 30px 15px 20px;
+    margin: 30px auto;
     padding: 20px;
     border: 1px solid #000;
-    
+    width: 300px;
 }
