Add margins - set content in the middle 2

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,6 @@
 .box{
-    margin: 30px auto;
+    margin: 30px 25%;
     padding: 20px;
     border: 1px solid #000;
-    width: 300px;
+    width: 50%;
 }
