--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,6 @@
 .box{
-    margin: 30px 25%;
-    padding: 20px;
+    margin: 30px;
+    padding: 30px 20px 10px 5px;
     border: 1px solid #000;
-    width: 50%;
+    
 }
