--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,9 @@
 .box{
-    margin: 30px;
-    padding: 30px 20%;
     border: 1px solid #000;
-    
+    padding: 10px;
+    margin: 30px;
+}
+
+.small{
+    padding-top: 5px;
 }
