--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,9 +1,36 @@
 .box{
-    border: 1px solid #000;
-    padding: 10px;
+    padding: 20px;
     margin: 30px;
+    float: left;
 }
 
-.small{
-    padding-top: 5px;
+.dashed{
+    border: 1px dashed black;
+}
+
+.dotted{
+    border: 1px dotted black;
+}
+.double{
+    border: 4px double blue;
+}
+
+.groove{
+    border: 14px groove blue;
+}
+
+.inset{
+    border: 14px inset blue;
+}
+
+.outset{
+    border: 14px outset blue;
+}
+
+.ridge{
+    border: 14px ridge blue;
+}
+
+.solid{
+    border: 14px solid blue;
 }
