--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,36 +1,21 @@
-.box{
-    padding: 20px;
-    margin: 30px;
-    float: left;
+.block{
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #000;
 }
 
-.dashed{
-    border: 1px dashed black;
+.inline{
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #000;
+    display: inline-block;
 }
 
-.dotted{
-    border: 1px dotted black;
-}
-.double{
-    border: 4px double blue;
-}
-
-.groove{
-    border: 14px groove blue;
-}
-
-.inset{
-    border: 14px inset blue;
-}
-
-.outset{
-    border: 14px outset blue;
-}
-
-.ridge{
-    border: 14px ridge blue;
-}
-
-.solid{
-    border: 14px solid blue;
+a{
+    padding: 10px;
+    margin: 10px;
+    background-color: #ccc;
+    border: 1px solid #aaa;
+    color: #000;
+    text-decoration: none;
 }
