--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,22 +1,9 @@
-#main-content div{
-    background-color: #ccc;
-    margin: 0 0 20px 0;
-}
-
 .static-width{
     width: 300px;
-    height: 100px;
-    border-radius: 30px;
-}
-
-.percentage-width{
-    width: 70%;
-    height: 50px;
-    border-radius: 5px 10px 20px 40px;
-}
-
-.inline-block{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+    height: 300px;
+    background-color: #606060;
+    background-image: url(https://www.iconsdb.com/icons/preview/white/idea-xxl.png);
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: 20% 60%;
 }
