--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,9 +1,7 @@
 .static-width{
     width: 300px;
     height: 300px;
+    background: url(https://www.iconsdb.com/icons/preview/white/idea-xxl.png) no-repeat top center;
     background-color: #606060;
-    background-image: url(https://www.iconsdb.com/icons/preview/white/idea-xxl.png);
     background-size: 50px;
-    background-repeat: no-repeat;
-    background-position: 20% 60%;
 }
