--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,8 @@
-.static-width{
-    width: 300px;
-    height: 300px;
-    background: url(https://www.iconsdb.com/icons/preview/white/idea-xxl.png) no-repeat top center;
+.banner{
     background-color: #606060;
-    background-size: 50px;
+    width: 100%;
+    height: 300px;
+    background-image: url(https://www.iconsdb.com/icons/preview/white/idea-xxl.png), url(https://www.iconsdb.com/icons/preview/white/lightbulb-xxl.png);
+    background-repeat: no-repeat;
+    background-position: left, right;   
 }
