--- a/css/syntax.css
+++ b/css/syntax.css
@@ -11,3 +11,31 @@ body{
     background: #fff;
 }
 
+#main-navigation{
+    background: #181818;
+    padding: 10px;
+}
+
+#main-navigation ul{
+    text-align: right;
+    list-style-type: none;
+    margin-right: 10px;
+}
+
+#main-navigation li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+#main-navigation a{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 6px;
+}
+
+#main-navigation a.current{
+    background: #8f746c;
+    border-radius: 4px;
+}
